--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        <form method="post" action="/save">
+        <form method="post" action="saveUser">
             用户名：<input type="text" name="name" ><br>
             密&nbsp;码:<input type="password" name="password"><br>
             权&nbsp;限<input type="text" name="perms"><br>
